	PR c++/5333 	* cp-tree.h (CLASSTYPE_PRIMARY_TEMPLATE): New macro. 	* parser.c (cp_parser_diagnose_invalid_type_name): Use it. 	* pt.c (instantiate_class_template): Don't try to instantiate 	dependent types. 	(resolve_typename_type): Use CLASSTYPE_PRIMARY_TEMPLATE.

PR c++/5333
	* g++.dg/parse/fused-params1.C: Adjust error messages.
	* g++.dg/template/nested3.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@63354 138bc75d-0d04-0410-961f-82ee72b054a4